# test-grpc

./: LICENSE
net/: Program.cs
net/Properties/: launchSettings.json
net/Protos/: greet.proto
net/Services/: EchoService.cs
rust/: Cargo.toml  README.md  build.rs
rust/benches/: bench_client.rs
rust/proto/: echo.proto
rust/src/: lib.rs
