[package]
name = "test-grpc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bench]]
name = "bench_client"
harness = false

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.20", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
sha2 = "0.10"
pretty_env_logger = "0.4"
log = "0.4"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio",] }
